# face-mask-detection

./: CMakeLists.txt  README.md
examples/: test_face.cpp
src/: CMakeLists.txt
src/common/: common.h
src/face/: face_engine.cpp  face_engine.h
src/face/detecter/: detecter.cpp  detecter.h
src/face/detecter/anticonv/: anticonv.cpp  anticonv.h
